<resources>
    <string name="app_name">myNITT</string>
    <string name="next">next</string>
    <string name="prev">previous</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="events">Events</string>
    <string name="alarm">Alarm</string>
    <string name="to">To</string>
    <string name="didyouattend">Did You Attend ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel Event</string>
    <string name="Attendance">Attendance :</string>
    <string name="save">Save</string>
    <string name="type">Select Type :</string>
    <string name="course">Select Course :</string>
    <string name="attendenceWithPercent">%1$d %%</string>
    <string name="courseStatusAttend">You need to attend %1$d more class</string>
    <string name="courseStatusBunk">You can bunk %1$d class</string>
    <string name="event_name">Event Name</string>
    <string name="alert">Alert</string>
    <string name="nextClass">Next Class</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="addEvent">Add Event</string>
    <string name="notes">Notes</string>
    <string name="Welcome">Welcome</string>
    <string name="course_name">Course Name</string>
    <string name="credits">Credits</string>
    <string name="classes">Classes</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="Month_Year">%1$s %2$d</string>
    <string name="credits_disp">%1$d Credits</string>
    <string name="attended">You attended %1$d classes</string>
    <string name="bunked">You Bunked %1$d calsses</string>
    <string name="reschedule_to">Reschedule To</string>
    <string name="upload_files">Upload Files</string>
    <string name="uploading">Uploads</string>
    <string name="hi_name">Hi, %1$s</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="courses">Courses</string>
    <string name="quick_links">Quick Links</string>
    <string name="official_website">Official Website</string>
    <string name="webmail">WebMail</string>
    <string name="mis">MIS</string>
    <string name="ruby">Ruby</string>
    <string name="forms_portal">Forms Portal</string>
    <string name="important">Important</string>
    <string name="is_this_a_lab">Is this a lab</string>
    <string name="upcoming_events">Upcoming Events :</string>
    <string name="more_events">More Events . . .</string>
    <string name="see_courses">See Courses</string>
    <string name="add_common_notes">Add Common Notes</string>
    <string name="see_events">See Events</string>
    <string name="sign_in_text">Sign In</string>
    <string name="cr">CR</string>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Event_types">
        <item>OtherEvent</item>
        <item>Class</item>
        <item>LAB</item>
        <item>Assignment</item>
        <item>ClassTest</item>
        <item>EndSem</item>
    </string-array>

    <string-array name="slots">
        <item>none</item>
        <item>8:30 – 9:20</item>
        <item>9:20 – 10:10</item>
        <item>10:30 – 11:20</item>
        <item>11:20 – 12:10</item>
        <item>1:30 – 2:20</item>
        <item>2:20 – 3:10</item>
        <item>3:30 – 4:20</item>
        <item>4:20 – 5:10</item>
    </string-array>

    <string-array name="Departments">
        <item>Select Department</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>EEE</item>
        <item>Mech</item>
        <item>ICE</item>
        <item>Civil</item>
        <item>MME</item>
        <item>Prod</item>
        <item>Chem</item>
    </string-array>

    <string-array name="Year">
        <item>Select Year</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>

    <string-array name="Section">
        <item>Select Section</item>
        <item>A</item>
        <item>B</item>
    </string-array>

</resources>
