<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calenderRoot"
        android:background="@color/colorPrimaryDark"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calenderConstraint">


        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp" app:srcCompat="@drawable/ic_left_arrow"
                android:id="@+id/PrevMonthBtn"
                app:layout_constraintTop_toTopOf="@+id/MonthNameTxt"
                app:layout_constraintBottom_toBottomOf="@+id/MonthNameTxt"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
                android:contentDescription="@string/prev" android:foregroundTint="@color/white"
                android:tint="@color/white"/>
        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp" app:srcCompat="@drawable/ic_right_arrow"
                android:id="@+id/NextMonthBtn"
                app:layout_constraintTop_toTopOf="@+id/MonthNameTxt"
                app:layout_constraintBottom_toBottomOf="@+id/MonthNameTxt"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
                android:contentDescription="@string/next" android:tint="@color/white"/>
        <TextView
                tools:text="January"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/MonthNameTxt"
                app:layout_constraintStart_toEndOf="@+id/PrevMonthBtn"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/NextMonthBtn"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sun" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/mon"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/MonthNameTxt"
                android:textAlignment="center" android:textColor="@color/white" android:layout_marginStart="16dp"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/mon"
                app:layout_constraintStart_toEndOf="@+id/sun" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tue" app:layout_constraintTop_toTopOf="@+id/sun"
                android:textAlignment="center" android:textColor="@color/white" android:textSize="18sp"/>
        <TextView
                android:text="@string/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tue"
                app:layout_constraintStart_toEndOf="@+id/mon" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/wed" app:layout_constraintTop_toTopOf="@+id/mon"
                android:textAlignment="center" android:textColor="@color/white" android:textSize="18sp"/>
        <TextView
                android:text="@string/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/wed"
                app:layout_constraintStart_toEndOf="@+id/tue" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/thu" app:layout_constraintTop_toTopOf="@+id/tue"
                android:textAlignment="center" android:textColor="@color/white" android:textSize="18sp"/>
        <TextView
                android:text="@string/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/thu"
                app:layout_constraintStart_toEndOf="@+id/wed" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/fri" app:layout_constraintTop_toTopOf="@+id/wed"
                android:textAlignment="center" android:textColor="@color/white" android:textSize="18sp"/>
        <TextView
                android:text="@string/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fri"
                app:layout_constraintStart_toEndOf="@+id/thu" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/sat" app:layout_constraintTop_toTopOf="@+id/thu"
                android:textAlignment="center" android:textColor="@color/white" android:textSize="18sp"/>
        <TextView
                android:text="@string/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sat"
                app:layout_constraintStart_toEndOf="@+id/fri" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/fri"
                android:textAlignment="center" android:textColor="@color/white" android:layout_marginEnd="16dp"
                android:textSize="18sp"/>
        <GridView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/wed" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:id="@+id/CalGrid" android:numColumns="7"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:stretchMode="columnWidth" android:verticalSpacing="8dp" android:layout_marginTop="24dp"
                android:focusable="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:background="@drawable/event_rec_back"
                  app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                  app:behavior_peekHeight="200dp"
                  app:behavior_hideable="true"
                  android:elevation="3dp"
                  android:id="@+id/EventLayout" >
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/events"
                  android:textSize="40sp"
                  style="@style/TextAppearance.MaterialComponents.Body1"
                  android:textColor="@color/black"
                  android:layout_marginStart="32dp" android:fontFamily="@font/roboto"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/EventRecycler"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginTop="20dp"
        />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_plus" android:id="@+id/AddEventFAB"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@+id/EventLayout" app:layout_anchorGravity="top|right"
            android:layout_marginEnd="20dp" android:layout_marginBottom="20dp" android:elevation="5dp"
    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
