<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/AddCourseRoot">
    <com.google.android.material.card.MaterialCardView android:layout_width="0dp"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="8dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="8dp"
                                                       android:id="@+id/materialCardView"
                                                       app:layout_constraintTop_toBottomOf="@+id/button">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/CourseNameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:errorEnabled="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:hint="@string/course_name"
                                                                         android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/CourseCreditsInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true"
                    android:layout_below="@+id/CourseNameInputLayout"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:hint="@string/credits"
                                                                         android:inputType="number"
                                                                         android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/classes"
            style="@style/MyTextAppearance.head" android:id="@+id/textView6"/>
    <TextView
            android:text="@string/mon"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textViewMon"
            style="@style/MyTextAppearance.Body"
            app:layout_constraintTop_toTopOf="@+id/MonSlotPicker"
            app:layout_constraintBottom_toBottomOf="@+id/MonSlotPicker"
            app:layout_constraintVertical_bias="0.509" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/FriSlotPicker"/>

    <NumberPicker
            android:id="@+id/MonSlotPicker" android:layout_width="wrap_content" android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintBottom_toTopOf="@+id/TueSlotPicker" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/TueSlotPicker"
            app:layout_constraintEnd_toEndOf="@+id/TueSlotPicker" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewtue"
            style="@style/MyTextAppearance.Body"
            app:layout_constraintEnd_toEndOf="@+id/textViewMon"
            app:layout_constraintTop_toTopOf="@+id/TueSlotPicker"
            app:layout_constraintBottom_toBottomOf="@+id/TueSlotPicker"/>

    <NumberPicker
            android:id="@+id/TueSlotPicker" android:layout_width="wrap_content" android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/MonSlotPicker"
            app:layout_constraintBottom_toTopOf="@+id/WedSlotPicker"
            app:layout_constraintStart_toStartOf="@+id/WedSlotPicker"
            app:layout_constraintEnd_toEndOf="@+id/WedSlotPicker" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWed"
            style="@style/MyTextAppearance.Body"
            app:layout_constraintEnd_toEndOf="@+id/textViewtue"
            app:layout_constraintTop_toTopOf="@+id/WedSlotPicker"
            app:layout_constraintBottom_toBottomOf="@+id/WedSlotPicker"/>

    <NumberPicker
            android:id="@+id/WedSlotPicker" android:layout_width="wrap_content" android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/TueSlotPicker"
            app:layout_constraintBottom_toTopOf="@+id/ThuSlotPicker"
            app:layout_constraintStart_toStartOf="@+id/ThuSlotPicker"
            app:layout_constraintEnd_toEndOf="@+id/ThuSlotPicker" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewThu"
            style="@style/MyTextAppearance.Body"
            app:layout_constraintEnd_toEndOf="@+id/textViewWed"
            app:layout_constraintTop_toTopOf="@+id/ThuSlotPicker"
            app:layout_constraintBottom_toBottomOf="@+id/ThuSlotPicker"/>

    <NumberPicker
            android:id="@+id/ThuSlotPicker" android:layout_width="wrap_content" android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/WedSlotPicker"
            app:layout_constraintBottom_toTopOf="@+id/FriSlotPicker"
            app:layout_constraintStart_toStartOf="@+id/FriSlotPicker"
            app:layout_constraintEnd_toEndOf="@+id/FriSlotPicker" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFri"
            style="@style/MyTextAppearance.Body"
            app:layout_constraintEnd_toEndOf="@+id/textViewThu"
            app:layout_constraintTop_toTopOf="@+id/FriSlotPicker"
            app:layout_constraintBottom_toBottomOf="@+id/FriSlotPicker"/>

    <NumberPicker
            android:id="@+id/FriSlotPicker" android:layout_width="wrap_content" android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/ThuSlotPicker"
            android:layout_marginTop="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewMon" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/MyTextButton"
            android:drawableStart="@drawable/ic_check"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>