<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/EventDetailRoot">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/EventDetailName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp"
            tools:text="Maths Class"
            android:fontFamily="@font/roboto" android:textColor="@color/black" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Date"
            app:layout_constraintStart_toStartOf="@+id/EventDetailName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/EventDetailName" tools:text="Mon Jul 7, 2019"
            android:fontFamily="@font/roboto" android:textColor="@color/black" android:textSize="16sp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EventStartTime"
            tools:text="10 : 30 AM"
            app:layout_constraintStart_toStartOf="@+id/Date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Date" android:fontFamily="@font/roboto"
            android:textColor="@color/black" android:textSize="16sp"/>
    <TextView
            android:text="@string/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintBaseline_toBaselineOf="@+id/EventStartTime"
            app:layout_constraintStart_toEndOf="@+id/EventStartTime" android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto" android:textColor="@color/black" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EventEndTime" tools:text="11 :20 AM"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto" android:textColor="@color/black" android:textSize="16sp"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/EditEvent"
            app:layout_constraintBaseline_toBaselineOf="@+id/CancelEvent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/MyFilledButton" app:icon="@drawable/ic_edit" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            style="@style/MyTextButton"
            android:layout_height="wrap_content" android:id="@+id/CancelEvent"
            app:layout_constraintEnd_toStartOf="@+id/EditEvent"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>
    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:id="@+id/DidYouAttendCard"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/attendanceTxt">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/DidYouAttendhead"
                    android:text="@string/didyouattend"
                    android:textSize="24sp" android:textAlignment="center" android:layout_margin="16dp"
                    android:fontFamily="@font/roboto" android:textColor="@color/black" android:textStyle="bold"/>
            <com.google.android.material.button.MaterialButton
                    android:text="@string/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/EventAttendedPositive"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:icon="@drawable/ic_check"
                    style="@style/MyFilledButton"/>
            <com.google.android.material.button.MaterialButton
                    android:text="@string/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/EventAttendedNegative"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:icon="@drawable/ic_close"
                    style="@style/MyFilledButton"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
            android:text="@string/Attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attendanceTxt"
            app:layout_constraintTop_toBottomOf="@+id/EventStartTime" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/EventStartTime" android:fontFamily="@font/roboto"
            android:textColor="@color/black" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EventAttendance" tools:text="75%"
            app:layout_constraintBaseline_toBaselineOf="@+id/attendanceTxt"
            app:layout_constraintStart_toEndOf="@+id/attendanceTxt" android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto" android:textColor="@color/black" android:textSize="16sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>