<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/DialogAddEventRoot">

    <TextView
            android:text="@string/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseNameLabel"
            style="@style/MyTextAppearance.Body" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/courseNameLabel"
            app:layout_constraintBottom_toBottomOf="@+id/courseNameLabel"
            app:layout_constraintStart_toEndOf="@+id/courseNameLabel" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeLabel" style="@style/MyTextAppearance.Body"
            app:layout_constraintStart_toStartOf="@+id/courseNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/courseNameLabel" android:layout_marginTop="32dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            app:layout_constraintTop_toTopOf="@+id/typeLabel" app:layout_constraintBottom_toBottomOf="@+id/typeLabel"
            app:layout_constraintStart_toEndOf="@+id/typeLabel" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:entries="@array/Event_types"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EventStartTime"
            tools:text="10 : 30 AM"
            app:layout_constraintStart_toStartOf="@+id/EventDate"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/EventDate" android:fontFamily="@font/roboto"
            android:textColor="@color/primaryDarkColor" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EventDate"
            tools:text="Mon Jul 7, 2019"
            android:fontFamily="@font/roboto" android:textColor="@color/primaryDarkColor" android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/typeLabel" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/typeLabel"/>
    <TextView
            android:text="@string/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintBaseline_toBaselineOf="@+id/EventStartTime"
            app:layout_constraintStart_toEndOf="@+id/EventStartTime" android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto" android:textColor="@color/black" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EventEndTime" tools:text="11 :20 AM"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto" android:textColor="@color/primaryDarkColor" android:textSize="16sp"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyFilledButton"
            android:id="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/EventStartTime" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" app:icon="@drawable/ic_check"/>

</androidx.constraintlayout.widget.ConstraintLayout>